Use: WHATWG URL API

--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "body-data",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "一个轻量、小巧的Node.js模块，用于检索 GET 或 POST 请求数据 | A lightweight, small Node.js module for retrieving GET or POST request data",
   "main": "index.js",
   "scripts": {
     "test": "npx mocha",
+    "start": "node test/server",
     "lint": "eslint . && prettier --check .",
     "lint:fix": "eslint --fix . && prettier --check --write ."
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lete114/body-data.git"
+    "url": "git+https://github.com/Lete114/Body-Data.git"
   },
   "keywords": [
     "body",
@@ -22,9 +23,9 @@
   "author": "Lete乐特",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lete114/body-data/issues"
+    "url": "https://github.com/Lete114/Body-Data/issues"
   },
-  "homepage": "https://github.com/lete114/body-data#readme",
+  "homepage": "https://github.com/Lete114/Body-Data#readme",
   "devDependencies": {
     "axios": "^0.24.0",
     "eslint": "^8.4.1",
