调整: 直接将 searchParams 转换为 json 对象，不再需要for遍历 增强: 对可能存在的错误做出处理

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,10 +1,10 @@
 env:
   commonjs: true
-  es2021: true
+  es6: true
   node: true
 extends: eslint:recommended
 parserOptions:
-  ecmaVersion: 13
+  ecmaVersion: latest
 rules:
   # off   或 0 - 关闭规则
   # warn  或 1 - 开启规则, 使用警告 程序不会退出
