--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "body-data",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "一个轻量、小巧的Node.js模块，用于检索 GET 或 POST 请求数据 | A lightweight, small Node.js module for retrieving GET or POST request data",
   "main": "index.js",
   "scripts": {
     "test": "npx mocha",
-    "lint": "eslint . && prettier --check .",
-    "lint:fix": "eslint --fix . && prettier --check --write ."
+    "lint": "npx eslint . && npx prettier --check .",
+    "lint:fix": "npx eslint --fix . && npx prettier --check --write ."
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,8 @@
   "homepage": "https://github.com/Lete114/Body-Data#readme",
   "devDependencies": {
     "axios": "^0.24.0",
-    "eslint": "^8.4.1",
-    "mocha": "^9.1.3",
+    "eslint": "^7.32.0",
+    "mocha": "^9.2.2",
     "prettier": "^2.5.1"
   }
 }
