fix: 新增 ts 类型支持，以及修改一些判断

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.5",
   "description": "一个轻量、小巧的Node.js模块，用于检索 GET 或 POST 请求数据 | A lightweight, small Node.js module for retrieving GET or POST request data",
   "main": "index.js",
+  "typings": "index.d.ts",
   "scripts": {
     "test": "npx mocha",
     "lint": "npx eslint . && npx prettier --check .",
